--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <h1>Carolyn's website</h1>
 
 <div>A magpie stole my cat's shrew</div>
+<span>First part of this line</span>
+<span>second part of this line</span>
+<div class="">And this is a different line
+
+</div>
