Update: added table
added a table

--- a/index.html
+++ b/index.html
@@ -2,7 +2,39 @@
 
 <div>A magpie stole my cat's shrew</div>
 <span>First part of this line</span>
-<span>second part of this line</span>
+<span style =color:blue>second part of this line</span>
 <div class="">And this is a different line
-
 </div>
+<table>
+  <tr>
+    <td style="background-color:orange; width:200px; height:200px">hello</td>
+    <td>Row 1 Column 1</td>
+    <td>Row 1 Column 2</td>
+    <td>Row 1 Column 3</td>
+  </tr>
+  <tr>
+    <td>there</td>
+    <td>Row 2 Column 1</td>
+    <td>Row 2 Column 2</td>
+    <td>Row 2 Column 3</td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <td style=""><div class="">
+
+    </div></td>
+    <td><div class="">
+
+    </div></td>
+    <td>Row 1 Column 2</td>
+    <td>Row 1 Column 3</td>
+  </tr>
+  <tr>
+    <td>there</td>
+    <td>Row 2 Column 1</td>
+    <td>Row 2 Column 2</td>
+    <td>Row 2 Column 3</td>
+  </tr>
+</table>
